# yolo26-segmentation-libtorch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/yolo-seg/: Cargo.toml
crates/yolo-seg-cli/: Cargo.toml
crates/yolo-seg-cli/src/: main.rs
crates/yolo-seg/src/: error.rs  lib.rs  segmenter.rs
models/: README.md
scripts/: cargo-libtorch.sh  export_torchscript.py  package_release_macos.sh  setup-libtorch.sh
