[package]
name = "yolo-seg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "yolo26-seg"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tch.workspace = true
yolo-seg = { path = "../yolo-seg" }

